Update FCAIScheduler.java