@@ -19,116 +19,133 @@ public class FCAIScheduler implements Scheduler {
         double V1, V2;
         List<Process> readyQueue = new ArrayList<>();
         List<String> log = new ArrayList<>();
+        List<String> execOrder = new ArrayList<>();
+        Map<Process, Integer> completionTime = new HashMap<>();
+        Map<Process, Integer> waitingTime = new HashMap<>();
+        Map<Process, Integer> turnaroundTime = new HashMap<>();
+        Map<Process, List<Integer>> quantumHistory = new HashMap<>();
+
+        Process currentProcess = null;
+        int executionTime = 0;
         int completedProcesses = 0;
 
-        // Initialize data structures
-        int[] waitingTimes = new int[processes.size()];
-        int[] turnaroundTimes = new int[processes.size()];
-        List<List<Integer>> quantumHistory = new ArrayList<>();
-
-        // Initialize quantum history
-        for (Process p : processes) {
-            List<Integer> initialHistory = new ArrayList<>();
-            initialHistory.add(p.getQuantum());
-            quantumHistory.add(initialHistory);
-        }
-
         // Calculate V1 and V2
-        V1 = (double) processes.get(processes.size() - 1).getArrivalTime() / 10;
+        V1 = (double) processes.getLast().getArrivalTime() / 10;
         int maxBurstTime = processes.stream().mapToInt(Process::getBurstTime).max().orElse(1);
         V2 = (double) maxBurstTime / 10;
 
+        // Initial FCAI factor calculation
+        for (Process p : processes) {
+            quantumHistory.put(p, new ArrayList<>());
+            quantumHistory.get(p).add(p.getQuantum());
+            p.setFCAIFactor(calculateFCAIFactor(p, V1, V2));
+        }
+
+        // loop till all processes finish the work
         while (completedProcesses < processes.size()) {
             // Add processes that have arrived to the ready queue
             for (Process p : processes) {
-                if (p.getArrivalTime() <= currentTime && p.getRemainingBurstTime() > 0 && !readyQueue.contains(p)) {
+                if (p.getArrivalTime() == currentTime && p.getRemainingBurstTime() > 0 && !readyQueue.contains(p)) {
                     readyQueue.add(p);
                 }
             }
 
             // If no process is ready, advance time
-            if (readyQueue.isEmpty()) {
+            if (currentProcess == null && readyQueue.isEmpty()) {
                 currentTime++;
                 continue;
             }
 
-            // Recalculate FCAI factors and sort queue
+            // If no process is running, pick the next one from the ready queue
+            if (currentProcess == null) {
+                currentProcess = readyQueue.removeFirst();
+            }
+
+            // update time and remaining time of the current process
+            currentProcess.setRemainingBurstTime(currentProcess.getRemainingBurstTime() - 1);
+            currentTime++;
+
+            // Recalculate FCAI factors for all processes in the ready queue before execution or preemption
             for (Process p : readyQueue) {
                 p.setFCAIFactor(calculateFCAIFactor(p, V1, V2));
             }
-            readyQueue.sort(Comparator.comparingDouble(Process::getFCAIFactor));
 
-            // Get the process with the lowest FCAI factor
-            Process currentProcess = readyQueue.remove(0);
-            int processIndex = processes.indexOf(currentProcess);
-
-            // Calculate execution time (non-preemptively for 40% of its quantum)
-            int executionTime = (int) Math.ceil(currentProcess.getQuantum() * 0.4);
-            executionTime = Math.min(executionTime, currentProcess.getRemainingBurstTime());
-
-            int startTime = currentTime;
-            currentTime += executionTime;
-            currentProcess.setRemainingBurstTime(currentProcess.getRemainingBurstTime() - executionTime);
-
-            // Update waiting times for other processes in the ready queue
-            for (Process p : readyQueue) {
-                int index = processes.indexOf(p);
-                waitingTimes[index] += executionTime;
+            // Check if the process has completed
+            if (currentProcess.getRemainingBurstTime() == 0) {
+                completedProcesses++;
+                completionTime.put(currentProcess, currentTime + 1); // Store completion time
+                turnaroundTime.put(currentProcess, completionTime.get(currentProcess) - currentProcess.getArrivalTime());
+                waitingTime.put(currentProcess, turnaroundTime.get(currentProcess) - currentProcess.getBurstTime());
+                readyQueue.remove(currentProcess);
+                currentProcess = null;// Release the processor
+                executionTime=1;
+                continue;
             }
 
+            // Check if the process should be preempted
             boolean preempted = false;
+            Process nextProcess = null;
 
-            // Check if another process should preempt the current process
-            if (!readyQueue.isEmpty()) {
-                Process bestProcess = readyQueue.get(0);
-                if (bestProcess.getFCAIFactor() < currentProcess.getFCAIFactor()) {
-                    preempted = true;
+            if (executionTime >= Math.ceil(currentProcess.getQuantum() * 0.4) ) {
+                if(!readyQueue.isEmpty()) {
+                    for (Process p : readyQueue) {
+                        if (p.getFCAIFactor() < currentProcess.getFCAIFactor()) {
+                            readyQueue.remove(p);
+                            nextProcess = p;
+                            preempted = true;
+                            break;
+                        }
+                    }
                 }
-            }
 
-            int oldQuantum = currentProcess.getQuantum();
-            if (preempted) {
-                // Update quantum with unused portion and re-add to queue
-                int unusedQuantum = oldQuantum - executionTime;
-                currentProcess.setQuantum(oldQuantum + unusedQuantum);
-                quantumHistory.get(processIndex).add(currentProcess.getQuantum());
-                readyQueue.add(currentProcess);
-            } else {
-                // If not preempted and unfinished, update quantum
-                if (currentProcess.getRemainingBurstTime() > 0) {
-                    currentProcess.setQuantum(oldQuantum + 2);
-                    quantumHistory.get(processIndex).add(currentProcess.getQuantum());
+                if (preempted) {
+                    // Update quantum of the current process
+                    currentProcess.setQuantum(currentProcess.getQuantum() + (currentProcess.getQuantum() - executionTime));
+                    quantumHistory.get(currentProcess).add(currentProcess.getQuantum());
+                    readyQueue.add(currentProcess);// Re-add the current process to the queue
+                    execOrder.add(currentProcess.getName());
+                    currentProcess = nextProcess;// Switch to the next process
+                    executionTime = 0; // Reset execution time
+                } else if (executionTime >= currentProcess.getQuantum()) {
+                    // If quantum is fully used, update quantum and re -add to queue
+                    currentProcess.setQuantum(currentProcess.getQuantum() + 2);
+                    quantumHistory.get(currentProcess).add(currentProcess.getQuantum());
                     readyQueue.add(currentProcess);
-                } else {
-                    completedProcesses++;
-                    turnaroundTimes[processIndex] = currentTime - currentProcess.getArrivalTime();
+                    execOrder.add(currentProcess.getName());
+                    currentProcess = null;
+                    executionTime = 0;// Release the processor
                 }
             }
-
-            // Log execution details
-            log.add(String.format("Time %d-%d | Process: %s | Remaining Burst: %d | Quantum: %d -> %d",
-                    startTime, currentTime, currentProcess.getName(), currentProcess.getRemainingBurstTime(),
-                    oldQuantum, currentProcess.getQuantum()));
+            executionTime++;
+        }
+        // Calculate averages
+        double totalWaitingTime = 0;
+        double totalTurnaroundTime = 0;
+        for (Process p : processes) {
+            totalWaitingTime += waitingTime.get(p);
+            totalTurnaroundTime += turnaroundTime.get(p);
         }
 
-        // Print execution log
-        System.out.println("Execution Log:");
-        log.forEach(System.out::println);
+        double averageWaitingTime = totalWaitingTime / processes.size();
+        double averageTurnaroundTime = totalTurnaroundTime / processes.size();
+        // Print metrics
+        for (Process p : processes) {
+            log.add("Process " + p.getName() + " -> Waiting Time: " + waitingTime.get(p) +
+                    ", Turnaround Time: " + turnaroundTime.get(p));
+        }
+        log.add("Average Waiting Time: " + averageWaitingTime);
+        log.add("Average Turnaround Time: " + averageTurnaroundTime);
 
-        // Calculate averages
-        double totalWaitingTime = Arrays.stream(waitingTimes).sum();
-        double totalTurnaroundTime = Arrays.stream(turnaroundTimes).sum();
-        double avgWaitingTime = totalWaitingTime / processes.size();
-        double avgTurnaroundTime = totalTurnaroundTime / processes.size();
+        log.add("Quantum History for Each Process:");
+        for (Process p : processes) {
+            log.add("Process " + p.getName() + " Quantum History: " + quantumHistory.get(p));
+        }
+        // Print the log
+        log.add("Execution Order:");
+        log.addAll(execOrder);
 
-        // Print results
-        System.out.printf("Average Waiting Time: %.2f\n", avgWaitingTime);
-        System.out.printf("Average Turnaround Time: %.2f\n", avgTurnaroundTime);
-
-        // Print quantum history
-        System.out.println("Quantum History:");
-        for (int i = 0; i < processes.size(); i++) {
-            System.out.println(processes.get(i).getName() + ": " + quantumHistory.get(i));
+        for (String entry : log) {
+            System.out.println(entry);
         }
     }
 }
